# robostics_second_project

./: CMakeLists.txt  README.md  package.xml
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  map_viewer.rviz  mapping.rviz
launch/: amcl.launch  gmapping_mapping.launch  goal_publisher.launch  map_viewer.launch  mapping.launch  slam_mapping.launch  task_one.launch  task_two.launch
maps/: gmapping_map.yaml  map.yaml  slam_map.pgm  slam_map.yaml  slam_mapyaml
rviz/: robot_navigation.rviz
src/: goal_publisher.cpp  odom_to_tf.cpp
urdf/: scout_mini.urdf.xacro
urdf/launch/: description.launch.xml
world/: stage.cfg  stage.world
world/models/: map.inc  scout_mini.inc
